 - (djm) [loginrec.c loginrec.h] Use correct uid_t/pid_t types instead of    int. Should fix bz#1817 cleanly; ok dtucker@